[gd_scene format=3 uid="uid://bu71l16qoa2dw"]

[ext_resource type="Script" uid="uid://cf0fefv42bgt4" path="res://Scripts/graph_edit.gd" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://ctdfhgnwtrfac" path="res://Scripts/window_config.gd" id="2_0xm2m"]

[node name="Main" type="Control" unique_id=1440128229]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=746021983]
layout_mode = 0
offset_right = 159.0
offset_bottom = 31.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer" unique_id=133841393]
layout_mode = 2

[node name="Make" type="Button" parent="MarginContainer/HBoxContainer" unique_id=38812600]
layout_mode = 2
text = "Criar Bloco"

[node name="Save" type="Button" parent="MarginContainer/HBoxContainer" unique_id=1597403846]
layout_mode = 2
text = "Salvar"

[node name="Save more" type="Button" parent="MarginContainer/HBoxContainer" unique_id=1469362582]
layout_mode = 2
text = "Salvar Como"

[node name="Load" type="Button" parent="MarginContainer/HBoxContainer" unique_id=76112740]
layout_mode = 2
text = "Carregar"

[node name="Config" type="Button" parent="MarginContainer/HBoxContainer" unique_id=434756496]
layout_mode = 2
text = "Configurações"

[node name="More" type="Button" parent="MarginContainer/HBoxContainer" unique_id=22062854]
layout_mode = 2
text = "Sobre"

[node name="GraphEdit" type="GraphEdit" parent="." unique_id=251952592 node_paths=PackedStringArray("file_dia", "file_load", "more")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 35.0
grow_horizontal = 2
grow_vertical = 2
show_zoom_label = true
show_arrange_button = false
script = ExtResource("1_ig7tw")
file_dia = NodePath("../FileDialog")
file_load = NodePath("../File Load")
more = NodePath("../AcceptDialog")

[node name="Window" type="Window" parent="." unique_id=1806257895 node_paths=PackedStringArray("Geapgh")]
oversampling_override = 1.0
title = "Configurações"
initial_position = 1
size = Vector2i(500, 300)
visible = false
script = ExtResource("2_0xm2m")
Geapgh = NodePath("../GraphEdit")

[node name="VBoxContainer" type="VBoxContainer" parent="Window" unique_id=647695880]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -97.5
offset_right = 97.5
offset_bottom = 40.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Window/VBoxContainer" unique_id=1086933459]
layout_mode = 2

[node name="Type Grid" type="Label" parent="Window/VBoxContainer/HBoxContainer" unique_id=920161610]
layout_mode = 2
text = "Tipo de Grade"

[node name="Option Grids" type="OptionButton" parent="Window/VBoxContainer/HBoxContainer" unique_id=1789191148]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Linhas"
popup/item_0/id = 0
popup/item_1/text = "Dots"
popup/item_1/id = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Window/VBoxContainer" unique_id=946023233]
layout_mode = 2

[node name="Type Grid" type="Label" parent="Window/VBoxContainer/HBoxContainer2" unique_id=1334705798]
layout_mode = 2
text = "Tipo de Scroll"

[node name="Option Scroll" type="OptionButton" parent="Window/VBoxContainer/HBoxContainer2" unique_id=396857958]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Zooms"
popup/item_0/id = 0
popup/item_1/text = "Pans"
popup/item_1/id = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="Window/VBoxContainer" unique_id=61843572]
layout_mode = 2

[node name="Type Grid" type="Label" parent="Window/VBoxContainer/HBoxContainer3" unique_id=559483811]
layout_mode = 2
text = "Tamanho Padrão"

[node name="Option Scroll" type="SpinBox" parent="Window/VBoxContainer/HBoxContainer3" unique_id=1830448274]
layout_mode = 2
min_value = 1.0
max_value = 120.0
value = 16.0

[node name="AcceptDialog" type="AcceptDialog" parent="." unique_id=164421219]
oversampling_override = 1.0
title = "Sobre o Programa"
initial_position = 1
size = Vector2i(132, 100)
unresizable = true
force_native = true

[node name="FileDialog" type="FileDialog" parent="." unique_id=2093349877]
oversampling_override = 1.0
initial_position = 1
access = 2
filters = PackedStringArray("*.json", "*.uxv")
use_native_dialog = true

[node name="File Load" type="FileDialog" parent="." unique_id=952249860]
oversampling_override = 1.0
title = "Open a File"
initial_position = 1
file_mode = 0
access = 2
filters = PackedStringArray("*.json", "*.uxv")
use_native_dialog = true

[connection signal="pressed" from="MarginContainer/HBoxContainer/Make" to="GraphEdit" method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Save" to="GraphEdit" method="_on_save_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Save more" to="GraphEdit" method="_on_save_more_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Load" to="GraphEdit" method="_on_load_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Config" to="Window" method="_on_config_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/More" to="GraphEdit" method="_on_more_pressed"]
[connection signal="connection_request" from="GraphEdit" to="GraphEdit" method="_on_connection_request"]
[connection signal="close_requested" from="Window" to="Window" method="_on_close_requested"]
[connection signal="item_selected" from="Window/VBoxContainer/HBoxContainer/Option Grids" to="Window" method="_on_option_grids_item_selected"]
[connection signal="item_selected" from="Window/VBoxContainer/HBoxContainer2/Option Scroll" to="Window" method="_on_option_scroll_item_selected"]
[connection signal="value_changed" from="Window/VBoxContainer/HBoxContainer3/Option Scroll" to="Window" method="_on_option_scroll_value_changed"]
